# doc-search

./: .gitignore  README.md  index.json  pyproject.toml
src/doc_search/: __init__.py  cli.py  indexer.py  search.py  storage.py
