[project]
name = "doc-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jaden Vo", email = "jaden.p.vo@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pypdf>=5.0.0,<6.0.0",
    "typer>=0.12.3",
]

[project.scripts]
docsearch = "doc_search.cli:app"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.ruff.format]
quote-style = "double"